[project]
name = "neetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hypothesis>=6.146.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[project.scripts]
neetcode = "neetcode:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
